# convergent-minds

./: .gitignore  README.md  check_data.py  check_layers.py  debug_generation_test.py  debug_investigation.py  inspect_bert.py  main.py  pyproject.toml  reproduce_issue.py  run_brain_alignment.sh  run_localization.sh  score_alignment.py  score_hierarchical_alignment.py  score_surprisal_alignment.py  setup.sh  test_fix.py  verify_benchmark.py
alignment/: inspect_score.py  model_statistics.py  objective_features.py  plot_attention.py  precompute_objective_features.py  score_brain_alignment.py  show_samples.py  statistics.py  visualize_attention.py
alignment/metrics/: linear_partial_r2.py
brain-alignment/: compare_scores.py  inspect_score.py  score_brain_alignment.py  visualize_attention.py
brainscore/: __main__.py
brainscore/model_helpers/: container.py  huggingface.py  localize.py
brainscore/submission/: endpoints.py
convminds/: __init__.py  _splits.py  cache.py  errors.py  interfaces.py  objectives.py  pipeline.py
language-localization/: extract_activations.py  localize_fed10.py  utils.py
scripts/: analyze_results.sh  calculate_lexical_statistics.sh  calculate_objective_features.sh  compare_experiments.py  download_pereira_data.py  localize_top_units.sh  plot_decay_alignment.py  run_brain_alignment.sh  run_tests.sh  score_alignment.sh  score_hierarchical_alignment.sh  score_surprisal_alignment.sh  setup.sh
tests/: base_pipeline.py  diagnose_tg.py  hrf_lag_diagnostic.py  huth_vae_pipeline.py  inspect_language_quality.py  pca_vs_vae.py  peek_tg.py  repro_vae_main.py  test_data.py  test_hierarchical_gpt.py  test_huth_read.py  test_huth_structure.py  test_linear_partial_r2.py  test_model_readout.py  test_models.py  test_nn.py  test_objective_features.py  test_partial_r2.py  test_preprocessing.py  test_recipes.py  test_refactor.py  test_temporal_batching.py  test_traits.py  verify_partial_r2_v2.py
(+212 files in other folders)
