################################################################
#### project config ####
################################################################

[project]
name = "convminds"
version = "2.1.0"
description = ""
authors = [
    { name = "Jacopo Minniti", email = "jacopo.minniti004@gmail.com" }
]
license = { 'file' = 'LICENSE' }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "tqdm",
    "numpy>=1.21",
    "brainscore-core",
    "brainio",
    "fire",
    "scikit-learn",
    "xarray",
    "scipy",
    "pandas",
    "datasets",
    "result-caching",
    # model_helpers dependencies
    "torch>=1.9.1",
    "transformers>=4.11.3",
    "gensim",
    "joblib",
    "matplotlib",
    "seaborn",
    # submission dependencies
    "requests",
    "wordfreq>=3.0.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-check<=1.3.0",
]

[build-system]
requires = [
    "setuptools>=65",
    "wheel"
]


################################################################
#### mypy type-checking config ####
################################################################

[tool.mypy]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = [
    "tests"
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning"
]

markers = [
    "memory_intense",
    "travis_slow",
    "slow",
    "private_access",
]


################################################################
#### setuptools packaging config ####
################################################################

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["convminds*"]

[tool.setuptools.package-data]
# include non-python files in package install
"convminds" = ["**/*.json", "**/*.csv", "**/*.txt", "**/requirements.txt"]
